# calaxy_project

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: aws.yml
migrations/: 20230725234307_initial-tables.sql
scripts/: application_start.sh  application_stop.sh
src/: main.rs
