[package]
name = "calaxy_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3"}
reqwest = "0.11"
rocket-multipart-form-data = {version = "0.10.5"}
# diesel = { version = "2.1.0", features = ["postgres"]}
dotenv = "0.15"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0"
